--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -51,6 +51,10 @@ $black: #111111;
     text-decoration: none;
   }
 }
+
+body{
+  background-color: $white;
+}
 .wrapper{
   display: flex;
   justify-content:  center;
@@ -118,6 +122,58 @@ $black: #111111;
     }
 }
 
+
+.additionalQuestion{
+  display: none !important;
+  background-color: $white;
+  border-radius: 10px;
+  transform: translateY(-53px);
+  display: flex;
+  flex-direction: column;
+  box-shadow: -0px 0px 30px -10px rgba(0, 0, 0, 0.856);
+  .topSection{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 2px 20px;
+
+    .additionalQuestionTitle{
+      :nth-child(2){
+        color: $primaryColor;
+      }
+    }
+    a{
+      button{
+        padding: 5px 15px;
+        padding-right: 5px;
+        margin-bottom: 0px !important;
+      }
+    }
+
+
+    b{
+      font-size: 40px;
+      font-family: "bold";
+    }
+  }
+  .bottomSection{
+    display: flex;
+    margin: 0px 20px;
+    margin-bottom: 10px;
+    text-align: center;
+    p{
+      font-size: 18px
+    }
+  
+    
+  }
+}
+
+@media(min-width:550px){
+  .additionalQuestion{
+    display: block !important;
+  }
+}
 //-------------------------------MULTI PURPOSE CSS---------------------------------
 
 
@@ -126,4 +182,6 @@ $black: #111111;
 
 @import "index/_landing.scss";
 @import "index/_servicesSection.scss";
+@import "index/_whyUsSection.scss";
+@import "index/_aboutSection.scss";
 //-------------------------------IMPORTS---------------------------------
