--- a/styles/index/_whyUsSection.scss
+++ b/styles/index/_whyUsSection.scss
@@ -24,7 +24,7 @@
            
             }
             .image1{
-                background-image: url("../../images/calculator.png");
+                background-image: url("../../images/clock.png");
             }
             .image2{
                 background-image: url("../../images/spareChange.png");
@@ -70,4 +70,41 @@
     }
 
 
+}
+
+@media(min-width:800px){
+    .whySection{
+        .whySectionContent{
+            .whyReason{
+                flex-direction: unset;
+
+                .whyReasonImage{
+                    height: auto;
+                }
+
+                .image2{
+                    order: 2;
+                }
+
+                .whyReasonText{
+                    width: 700px;
+                    height: 400px;
+                    flex-shrink: 0;
+                    p{
+                        max-width: 500px;
+                        line-height: 40px;
+                        font-size: 18px;
+                        margin-top: 20px;
+                    }
+                }
+            }
+
+        }
+
+
+    }
+
+
+
+    
 }
