--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -72,8 +72,9 @@
                 flex-direction: column;
                 align-items: center;
                 li:first-child{
-                    padding-top: 0px;
+                    padding: 0px 0px;
                 }
+               
                 li{
                     padding: 20px 0px;
                     text-align: center;
