--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -179,7 +179,9 @@ body{
 
 //-------------------------------IMPORTS---------------------------------
 @import "_navigation.scss";
+@import "_footer.scss";
 
+@import "index/_testimonialSection.scss";
 @import "index/_landing.scss";
 @import "index/_servicesSection.scss";
 @import "index/_whyUsSection.scss";
