--- a/styles/index/_testimonialSection.scss
+++ b/styles/index/_testimonialSection.scss
@@ -1,12 +1,12 @@
 .testimonialSection{
    
-
+    margin-top: 100px;
     background-color: $primaryDark;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 50px 0px;
+    padding-bottom: 50px;
     .testimonial{
         position:relative;
         max-width: 350px;
