--- a/styles/styles.css
+++ b/styles/styles.css
@@ -513,12 +513,13 @@ footer .contact .fa-instagram {
 }
 
 .testimonialSection {
+  margin-top: 100px;
   background-color: #884B6A;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 50px 0px;
+  padding-bottom: 50px;
 }
 .testimonialSection .testimonial {
   position: relative;
@@ -828,19 +829,20 @@ footer .contact .fa-instagram {
   height: 300px;
   background-attachment: fixed;
   background-size: cover;
+  background-position: center center;
   background-position: center;
 }
 .whySection .whySectionContent .whyReason .image1 {
-  background-image: url("../../images/smallClock.png");
+  background-image: url("../../images/hourGlass.jpg");
 }
 .whySection .whySectionContent .whyReason .image2 {
-  background-image: url("../../images/spareChange.png");
+  background-image: url("../../images/moneyCAD.jpg");
 }
 .whySection .whySectionContent .whyReason .image3 {
-  background-image: url("../../images/clock.png");
+  background-image: url("../../images/hourGlass.jpg");
 }
 .whySection .whySectionContent .whyReason .whyReasonText {
-  background-color: #8B5974;
+  background-color: #884B6A;
   color: #FAFAFA;
   display: flex;
   flex-direction: column;
@@ -858,10 +860,10 @@ footer .contact .fa-instagram {
   max-width: 500px;
 }
 .whySection .whySectionContent .whyReason:nth-child(2) .whyReasonText {
-  background-color: #301E2E;
+  background-color: #AD6D90;
 }
 .whySection .whySectionContent .whyReason:nth-child(3) .whyReasonText {
-  background-color: #AD6D90;
+  background-color: #301E2E;
 }
 
 @media (min-width: 800px) {
@@ -892,7 +894,6 @@ footer .contact .fa-instagram {
   flex-direction: column;
   align-items: center;
   background-image: url("../../images/aboutBackground.png");
-  margin-top: 100px;
   background-size: cover;
 }
 .aboutSection .aboutSectionContent p {
