--- a/styles/index/_servicesSection.scss
+++ b/styles/index/_servicesSection.scss
@@ -78,6 +78,7 @@
                         margin-top: 10px;
                         margin-bottom: 15px;
                         font-size: 18px;
+                        padding: unset;
                     }
                 }
               
